Correct configuration files for IIS.

--- a/src/web.config
+++ b/src/web.config
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
- <configuration>
-     <system.webServer>
-         <httpErrors existingResponse="Replace" errorMode="Custom">
-             <remove statusCode="404" subStatusCode="-1" />
-             <error statusCode="404" prefixLanguageFilePath="" path="/index.html" responseMode="ExecuteURL" />
-         </httpErrors>
-     </system.webServer>
-     <system.web>
-         <sessionState mode="Off" />
-         <httpRuntime
-             requestValidationMode="2.0"
-             requestPathInvalidCharacters="&lt;,&gt;,%,&amp;,\,?,*" />
-         <pages validateRequest="false" />
-     </system.web>
- </configuration>
+<configuration>
+  <system.webServer>
+    <!--
+      IIS Url Rewrite extension must be installed on the server for this to work.
+      https://www.iis.net/downloads/microsoft/url-rewrite
+    -->
+    <rewrite>
+      <rules>
+      <rule name="Exclude API folder" enabled="true" stopProcessing="true">
+        <match url="api/" />
+          <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+          </conditions>
+          <action type="None" />
+        </rule>
+        <rule name="Angularjs with html5 mode" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_URI}" pattern="^/classcover/(api)" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="index.html" />
+        </rule>
+      </rules>
+    </rewrite>
+    <httpErrors>
+      <remove statusCode="404" subStatusCode="-1" />
+      <remove statusCode="500" subStatusCode="-1" />
+      <error statusCode="404" path="/survey/notfound" responseMode="ExecuteURL" />
+      <error statusCode="500" path="/survey/error" responseMode="ExecuteURL" />
+    </httpErrors>
+    <modules runAllManagedModulesForAllRequests="true"/>
+  </system.webServer>
+</configuration>
